--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asttokens==2.4.1
 billiard==4.2.1
 celery==5.4.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -24,6 +25,8 @@ django-jazzmin==3.0.0
 django-timezone-field==7.0
 django-unfold==0.39.0
 executing==2.1.0
+gevent==24.11.1
+greenlet==3.1.1
 gunicorn==23.0.0
 icecream==2.1.3
 idna==3.10
@@ -33,6 +36,7 @@ pillow==10.4.0
 prompt_toolkit==3.0.48
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pycparser==2.22
 Pygments==2.18.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
@@ -40,6 +44,7 @@ python-decouple==3.8
 python-ipware==3.0.0
 redis==5.2.0
 requests==2.32.3
+setuptools==75.6.0
 six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
@@ -48,3 +53,5 @@ urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.7.0
+zope.event==5.0
+zope.interface==7.2
